--- a/templates/student-list/index.html.twig
+++ b/templates/student-list/index.html.twig
@@ -6,17 +6,17 @@
     <table class="table">
         <tbody>
         <tr>
-            <td><div class="h1">Studentai</div></td>
+            <td>
+                <div class="h1">Studentai</div>
+            </td>
         </tr>
-        {#{% for student_name in students %}#}
         {% for path in paths %}
-            {#{% if path.utm_term == student_name %}#}
             <tr>
-                <td><a href="{{ path('student_info', {'utm_source': path.utm_source, 'utm_campaign': path.utm_campaign, 'utm_term': path.utm_term, 'utm_content': path.utm_content } ) }}">{{ path.utm_term }}</a></td>
+                <td>
+                    <a href="{{ path('student_info', {'utm_source': path.utm_source, 'utm_campaign': path.utm_campaign, 'utm_term': path.utm_term, 'utm_content': path.utm_content } ) }}">{{ path.utm_term }}</a>
+                </td>
             </tr>
-            {#{% endif %}#}
         {% endfor %}
-        {#{% endfor %}#}
         <tr>
             <td></td>
         </tr>
