--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}1 Symfony namų darbas{% endblock %}</title>
+    <title>{% block title %}2 Symfony namų darbas{% endblock %}</title>
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
     {% endblock %}
@@ -13,7 +13,13 @@
 <body>
 {% block body %}{% endblock %}
 {% block navigation %}
-    <a href="{{ path('student-list') }}">Studentų puslapis</a>
+    <nav class="navbar navbar-primary">
+        <ul class="nav navbar-nav">
+            <li><a href="{{ path('student-list') }}">Studentų puslapis</a></li>
+            <li><a href="{{ path('people') }}">Žmonės</a></li>
+        </ul>
+    </nav>
+
 {% endblock %}
 {% block javascripts %}
     <script src="{{ asset('build/js/app.js') }}"></script>
