--- a/templates/admin/review.twig
+++ b/templates/admin/review.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}For review{% endblock %}
+{% block title %}Peržiūra{% endblock %}
 
 {% block body %}
-    To be planned
+    Planuojama
 {% endblock %}
