--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% trans_default_domain 'FOSUserBundle' %}
 
 {% block body %}
     <div class="form-group">
@@ -23,13 +24,13 @@
     {% endif %}
 </div>
 
-    <div class="form-group">
+    <div class="form-group w-50">
         {% block fos_user_content %}
         {% endblock fos_user_content %}
     </div>
 
     {# Added custom code #}
     <div class="jumbotron">
-        <a class="btn btn-info btn-lg" href="{{ path('home') }}">My home</a>
+        <a class="btn btn-info btn-lg" href="{{ path('home') }}">Pagrindinis puslapis</a>
     </div>
 {% endblock %}
